fix: added whitespace styling option to breadcrumb links

--- a/manon/breadcrumb-bar-variables.scss
+++ b/manon/breadcrumb-bar-variables.scss
@@ -40,6 +40,7 @@
 
   /* Link */
   --breadcrumb-bar-link-text-decoration: none;
+  --breadcrumb-bar-link-white-space: nowrap;
 
   /* Link hover */
   --breadcrumb-bar-link-hover-text-decoration: none;
